# basic_ffnn

./: .gitignore  README.md  bffnn_uml.uxf
log/: learninglogs.txt  simlog.txt
scripts/: dataplot.py  learningcurves.py  simplot.py
src/: CMakeLists.txt  Layer.cpp  Layer.h  LinearLayer.cpp  LinearLayer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  SigmoidLayer.cpp  SigmoidLayer.h  main.cpp
src/dataset/: .sin_dataset.txt.swp  CMakeLists.txt  Dataset.cpp  Dataset.h  Dataset.h.autosave  SubDataSet.cpp  SubDataSet.h  SubDataset.cpp  SubDataset.h  sin_dataset.txt
src/layer/: CMakeLists.txt  Layer.cpp  Layer.h  LinearLayer.cpp  SigmoidLayer.cpp
src/neural_network/: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h
src/neural_trainer/: CMakeLists.txt  NeuralTrainer.cpp  NeuralTrainer.h
src/neuron/: CMakeLists.txt  LinearNeuron.cpp  LinearNeuron.h  Neuron.h  SigmoidNeuron.cpp  SigmoidNeuron.h
